--- a/KeyPadawan.csproj
+++ b/KeyPadawan.csproj
@@ -91,6 +91,7 @@
     <Compile Include="Model\KeyboardInterceptor.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="View\KeyNamesConverter.cs" />
     <Compile Include="Windows\AutoHideWindow.cs" />
     <Compile Include="Windows\NativeMethods.cs" />
     <Compile Include="View\PadawanWindow.xaml.cs">
