- Natural Text Logging - Some refactoring and clean up - Auto font size

--- a/KeyPadawan.csproj
+++ b/KeyPadawan.csproj
@@ -85,6 +85,7 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Model\NativeMethods.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
@@ -96,7 +97,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <Compile Include="View\KeyNamesConverter.cs" />
+    <Compile Include="View\NaturalTextConverter.cs" />
     <Compile Include="Windows\AutoHideWindow.cs" />
     <Compile Include="Windows\NativeMethods.cs" />
     <Compile Include="View\PadawanWindow.xaml.cs">
