--- a/app.config
+++ b/app.config
@@ -1,3 +1,26 @@
 <?xml version="1.0"?>
 <configuration>
-<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/></startup></configuration>
+<configSections>
+    <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+        <section name="KeyPadawan.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+    </sectionGroup>
+</configSections>
+<startup>
+  <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/></startup>
+    <userSettings>
+        <KeyPadawan.Properties.Settings>
+            <setting name="WindowHeight" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="WindowWidth" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="WindowLeft" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="WindowTop" serializeAs="String">
+                <value>0</value>
+            </setting>
+        </KeyPadawan.Properties.Settings>
+    </userSettings>
+</configuration>
