--- a/Dev/app.config
+++ b/Dev/app.config
@@ -21,6 +21,15 @@
             <setting name="WindowTop" serializeAs="String">
                 <value>0</value>
             </setting>
+            <setting name="ShortcutsMode" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="RawMode" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="NormalMode" serializeAs="String">
+                <value>True</value>
+            </setting>
         </KeyPadawan.Properties.Settings>
     </userSettings>
 </configuration>
