--- a/Dev/KeyPadawan.csproj
+++ b/Dev/KeyPadawan.csproj
@@ -46,7 +46,7 @@
     <WarningLevel>4</WarningLevel>
     <DebugType>full</DebugType>
     <ErrorReport>prompt</ErrorReport>
-    <CodeAnalysisRuleSet>AllRules.ruleset</CodeAnalysisRuleSet>
+    <CodeAnalysisRuleSet>ExtendedDesignGuidelineRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <OutputPath>bin\Release\</OutputPath>
@@ -109,7 +109,7 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
       <DependentUpon>Settings.settings</DependentUpon>
     </Compile>
-    <Compile Include="View\DefaultProcessorsBuilder.cs" />
+    <Compile Include="View\ProcessorsBuilder.cs" />
     <Compile Include="View\IProcessorsBuilder.cs" />
     <Compile Include="View\KeyProcessors\CharKeyProcessor.cs" />
     <Compile Include="View\IEventProcessor.cs" />
